<resources>
    <string name="app_name">EWL Store</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_location_found">Location</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_cart">Cart</string>
    <string name="action_check_updates">SIGN IN</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">eCommerce</string>
    <string name="nav_item_notifications">Messages</string>

    <string name="p_price">ট 3,590</string>
    <string name="n_price">ট 2,590</string>
    <string name="product_name">Product Name</string>
    <string name="subscribe">Subscribe</string>
    <string name="email">enter your email address here</string>
    <string name="descriptions">Please sign up to the RRMEWL Ecommerce mailing list to receive updates on new arrivals, special offers and other discount information..... to get special offers and other discount just enter your email and subscribe now!</string>
    <string name="newsletter">Newsletter</string>
    <string name="availability">Availability :</string>
    <string name="in_stock">In Stock</string>
    <string name="s_description">Quick Overview</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now!</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">eCommerce</string>
    <string name="title_home">Home</string>
    <string name="categories">Categories</string>
    <string name="settings">SETTINGS</string>
    <string name="account">ACCOUNT</string>
    <string name="welcome">Welcome</string>
    <string name="sign_out">sign out</string>

    <string-array name="brand_name">
        <item>"ASUS"</item>
        <item>"Hp"</item>
        <item>"Samsung"</item>
        <item>"iPhone"</item>
        <item>"Dell"</item>
        <item>"Mac Pro"</item>
        <item>"Acer"</item>

    </string-array>

    <string-array name="Item_name">
        <item>"$ 9,500"</item>
        <item>"$ 52,800"</item>
        <item>"$ 8,520"</item>
        <item>"$ 12,690"</item>
        <item>"$ 3,990"</item>
        <item>"$ 2,000"</item>
        <item>"$ 590"</item>
    </string-array>

    <string-array name="new_price">
        <item>"$ 9,500"</item>
        <item>"$ 52,800"</item>
        <item>"$ 8,520"</item>
        <item>"$ 12,690"</item>
        <item>"$ 3,990"</item>
        <item>"$ 2,000"</item>
        <item>"$ 590"</item>
    </string-array>

    <string-array name="pre_price">
        <item>"$ 11,590"</item>
        <item>"$ 56,500"</item>
        <item>"$ 13,000"</item>
        <item>"$ 15,700"</item>
        <item>"$ 5,690"</item>
        <item>"$ 3,590"</item>
        <item>"$ 1,090"</item>
    </string-array>


    <string name="tab_1">Home</string>
    <string name="tab_2">Products</string>
    <string name="tab_3">Favorites</string>
    <string name="tab_4">Cart</string>
    <string name="tab_5">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choice">Your\'s Choice</string>
    <string name="check_out">Check out and Payment</string>
    <string name="shopping_cart_title">Shopping Cart</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">RRM EWL Store The easiest way to find your favorite electronics product and have fun!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

</resources>