<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass = "android.support.v7.widget.SearchView" />

    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
        android:icon="@drawable/ic_location"
        android:title="@string/action_location_found"
        app:showAsAction="never" />

    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <!-- Help -->
    <item android:id="@+id/action_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/action_cart"
        app:showAsAction="never"/>

    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:icon="@drawable/ic_update"
        android:title="@string/action_check_updates"
        app:showAsAction="never" />
    <!-- Check updates -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:title="@string/action_help"
        app:showAsAction="never" />

</menu>