<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar"
        android:id="@+id/include" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cont_details">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="#00ffffff"
                    android:id="@+id/image_layout">

                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15dp"
                        android:padding="5dp"
                        android:src="@mipmap/ic_launcher"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/price_rating_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_layout"
                    android:padding="2dp"
                    android:layout_marginTop="20dp">


                    <TextView
                        android:id="@+id/pro_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/product_name"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="28sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        android:typeface="sans"/>


                    <TextView
                        android:id="@+id/price_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_price"
                        android:textColor="#08496c"
                        android:layout_marginStart="5dp"
                        android:layout_below="@+id/pro_name"
                        android:textSize="22sp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price_old"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/price_new"
                        android:text="@string/p_price"
                        android:layout_marginStart="5dp"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:textStyle="normal" />

                    <RatingBar
                        android:id="@+id/ratingBar2"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:isIndicator="true"
                        android:max="5"
                        android:maxHeight="30dp"
                        android:minHeight="35dp"
                        android:numStars="5"
                        android:rating="3"
                        android:stepSize="1"
                        android:theme="@style/RatingBar"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_rating_bar"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:checked="true"
                        android:layout_marginEnd="75dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:text="@string/in_stock"
                        android:textSize="18sp"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/avail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/availability"
                        android:textSize="18sp"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/quck_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/price_rating_bar"
                    android:layout_below="@+id/relativeLayout"
                    android:layout_marginTop="50dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:text="@string/s_description"
                    android:textColor="#16465c"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/quck_view"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:lineSpacingExtra="8sp"
                    android:padding="5dp"
                    android:text="@string/descriptions"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView6"
                    android:layout_marginTop="34dp"
                    android:padding="5dp"
                    android:text="£ this is pound are you doing anything?" />


                <View
                    android:id="@+id/v1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView"
                    android:layout_marginTop="36dp"
                    android:background="@color/cardview_dark_background" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/v1"
                    android:layout_marginTop="36dp"
                    android:padding="5dp"
                    android:text="$ something something"
                    tools:ignore="HardcodedText" />

                <View
                    android:id="@+id/v"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView8"
                    android:layout_marginTop="48dp"
                    android:background="@color/cardview_dark_background" />

                <Button
                    android:id="@+id/add_to_cart"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/add_to_cart"
                    android:textColor="#fff"
                    android:layout_marginStart="5dp"
                    android:layout_below="@+id/v"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="31dp" />

                <Button
                    android:id="@+id/buy_now"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button_buy"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/buy_now"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/white"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" />

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="#ffffff"
                    android:src="@drawable/heart_outline"
                    android:id="@+id/fav"
                    android:layout_marginEnd="33dp"
                    android:layout_marginBottom="122dp"
                    android:layout_above="@+id/relativeLayout"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </FrameLayout>

    </ScrollView>

</RelativeLayout>