<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="130dp"
            android:gravity="center"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:padding="5dp"
                android:id="@+id/pro_image" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pro_name"
                android:text="@string/product_name"
                android:padding="5dp"
                android:textSize="20sp"
                android:textColor="#3a6084"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_price"
                android:text="@string/n_price"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="#ff6716"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/p_price"
                android:text="@string/p_price"
                android:padding="5dp"
                android:textSize="12sp"
                android:textColor="#434343"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/discount"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="20% off!"
                android:textSize="14sp"
                android:textColor="#fa2820"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buy Now!"
                android:id="@+id/buy_button"
                android:background="#e7ec3030"
                android:textColor="#ffffff"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/close_svg"
                android:background="#00ffffff"
                android:id="@+id/remove"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>